MINOR: Various cleanups in clients (#17895)
Reviewers: Chia-Ping Tsai <chia7712@gmail.com>